; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_help.c_show_html_page.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_help.c_show_html_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @show_html_page to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @show_html_page(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.strbuf, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call i8* @cmd_to_page(i8* %5)
  store i8* %6, i8** %3, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = call i32 @get_html_page_path(%struct.strbuf* %4, i8* %7)
  %9 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %4, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @open_html(i32 %10)
  ret void
}

declare dso_local i8* @cmd_to_page(i8*) #1

declare dso_local i32 @get_html_page_path(%struct.strbuf*, i8*) #1

declare dso_local i32 @open_html(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
